--- a/LaTex/BachelorThesis/arbeit-vorlage.tex
+++ b/LaTex/BachelorThesis/arbeit-vorlage.tex
@@ -1680,7 +1680,9 @@ Eine bessere Methode ist, das Gitter immer gröber zu machen, bis das System dir
 \textbf{end}                                                & \notag
 \end{eqnarray}
 
-Dieser Algorithmus ist auch als V-Zyklus bekannt. Wie dieser Name zustande kommt illustriert (Bild V-Zyklus). Nun gibt es eine weitere Variante, den W-Zyklus (illustriert in Bild W-Zyklus):
+\bild{V-cycle}{8cm}{Text über V-Zyklus}{Text über V-Zyklus}\label{img.V-cycle}
+
+Dieser Algorithmus ist auch als V-Zyklus bekannt. Wie dieser Name zustande kommt illustriert \autoref{img.V-cycle}. Nun gibt es eine weitere Variante, den W-Zyklus (illustriert in \autoref{img.W-cycle}):
 
 \begin{eqnarray}
 \textbf{W-cycle }(u,b)                         & \notag \\
@@ -1698,6 +1700,8 @@ Dieser Algorithmus ist auch als V-Zyklus bekannt. Wie dieser Name zustande kommt
 &                                                                        &\textnormal{return } u_{h} \notag \\
 \textbf{end}                                                & \notag
 \end{eqnarray}
+
+\bild{W-cycle}{8cm}{Text über W-Zyklus}{Text über W-Zyklus}\label{img.W-cycle}
 
 % Man kann zeigen [Briggs/Saad], dass die Mehrgittermethoden einen Rechenaufwand von $\mathcal{O}(n)$ pro Iterationsschritt haben. Somit sind Mehrgitterverfahren effiziente und häufig verwendete Lösungsalgorithmen für lineare Gleichungssysteme. Im letzten Kapitel werden wir nun noch vergleichen, welcher der bisher vorgestellten Algorithmen für unsere Aufgabenstellung gut geeignet ist.
 
